--- a/src/App.css
+++ b/src/App.css
@@ -331,4 +331,52 @@
     text-decoration: none;
   }
 
+  .detailContainer{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .detail {
+    width: 800px;
+    display: flex;
+    padding: 15px;
+    border: 2px solid #ff4800;
+    flex-wrap: wrap;
+  }
+
+  .flex-col {
+    width: 400px;
+    height: 400px;
+    border: 2px solid black;
+  }
+
+  .textsCol {
+    margin-left: 15px;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    
+  }
+
+  .detailTitle {
+    margin-top: 15px;
+    
+  }
+
+  .detailPrice {
+    text-align:start;
+    justify-self: flex-start;
+    margin: 15px 15px 15px 0;
+    
+    
+  }
+
+  .detailDescription {
+    margin-top: 15px;
+  }
+
 }
